--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
 						>
 					</a>
 				</section>
+				<section class="header-info-block">
+					<div class="card-info">
+						<img
+							src="/img/girl-avatar.png"
+							alt="girl-avatar"
+							class="card-info-img"
+						/>
+						<h2 class="info-title">Karen William</h2>
+						<span class="info-subtitle">Senior Designer</span>
+					</div>
+
+					<div class="card-about">...</div>
+				</section>
 			</div>
 		</header>
 	</body>
