--- a/index.html
+++ b/index.html
@@ -59,7 +59,42 @@
 						<span class="info-subtitle">Senior Designer</span>
 					</div>
 
-					<div class="card-about">...</div>
+					<div class="card-about">
+						<div class="about-text-wrapper">
+							<span class="about-subtitle-text">About</span>
+							<p class="about-desc">
+								quis nostrud exercitaion ullamco laboris nisi ut
+								aliquip ex ea commodo consequat. Duis aute irure
+								dolor in
+							</p>
+						</div>
+
+						<div class="audio-block">
+							<img
+								src="/img/man-avatar.png"
+								alt="man-avatar"
+							/>
+							<div class="aodio-container">
+								<img
+									src="/img/audio.png"
+									class="audio-track"
+									alt="audio-track"
+								/>
+								<a
+									href="#"
+									class="play-btn"
+								>
+									<img
+										src="/img/icons/play.svg"
+										alt="icon-play"
+									/>
+								</a>
+							</div>
+						</div>
+
+						<h2 class="about-title">Testimonial</h2>
+						<span class="about-subtitle">Tom Hope</span>
+					</div>
 				</section>
 			</div>
 		</header>
