--- a/index.html
+++ b/index.html
@@ -1,210 +1,228 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Site</title>
-</head>
-<body>
-    <header class="header">
-        <div class="container">
-            <nav class="navigation">
-                <a href="#" class="logo">
-                    S
-                </a>
-                <ul class="navigation-holder">
-                    <li class="nav-link">
-                        <a href="#">
-                            EXPLORE
-                        </a>
-                    </li>
-                    <li class="nav-link">
-                        <a href="#">
-                            MENTORS
-                        </a>
-                    </li>
-                    <li class="nav-link">
-                        <a href="#">
-                            BLOG
-                        </a>
-                    </li>
-                    <li class="nav-link">
-                        <a href="#">
-                            COMMUNITY
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-            <section class="header-title">
-                <span class="header-subtitle-text">
-                    FEATURED CLASS
-                </span>
-                <h1 class="header-title-text">
-                    The role of
-                    User Interface
-                    Designer
-                </h1>
-                <a href="#" class="join">
-                    <img src="img/arrow.svg" alt="">
-                    <span class="join-text">
-                        Join <br> The Class
-                    </span>
-                </a>
-            </section>
-            <section class="header-info-block">
-                <div class="card-info">
-                    <img src="img/girl-avatar.jpg" alt="">
-                    <h2 class="info-title">
-                        Karen William
-                    </h2>
-                    <span class="info-subtitle">
-                        Senior Designer
-                    </span>
-                </div>
-                <div class="card-about">
-                    <div class="about-text-wrapper">
-                        <span class="about-subtitle-text">
-                            About
-                        </span>
-                        <p class="about-descr">
-                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                        </p>
-                    </div>
-                    <div class="audio-holder">
-                        <div class="audio-block">
-                          <img src="img/guy-avatar.jpg" alt="">
-                          <div class="audio-container">
-                            <div class="audio-detail">
-                              <div class="control">
-                                <i class="fi-rr-play" id="playPause"></i>
-                              </div>
-                              <div id="wave"></div>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="audio-author">
-                            <div class="time">
-                              <span id="current">0:00</span> /
-                              <span id="duration">0:00</span>
-                            </div>
-                        </div>
-                        <h2 class="about-title">
-                            Testimonial
-                        </h2>
-                        <span class="about-subtitle">
-                            Tom Hope
-                        </span>
-                    </div>      
-                </div>
-            </section>
-        </div>
-    </header>
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<link
+			rel="stylesheet"
+			href="style.css"
+		/>
+		<title>Site</title>
+	</head>
+	<body>
+		<header class="header">
+			<div class="container">
+				<nav class="navigation">
+					<a
+						href="#"
+						class="logo"
+					>
+						S
+					</a>
+					<ul class="navigation-holder">
+						<li class="nav-link">
+							<a href="#"> EXPLORE </a>
+						</li>
+						<li class="nav-link">
+							<a href="#"> MENTORS </a>
+						</li>
+						<li class="nav-link">
+							<a href="#"> BLOG </a>
+						</li>
+						<li class="nav-link">
+							<a href="#"> COMMUNITY </a>
+						</li>
+					</ul>
+				</nav>
+				<section class="header-title">
+					<span class="header-subtitle-text"> FEATURED CLASS </span>
+					<h1 class="header-title-text">
+						The role of User Interface Designer
+					</h1>
+					<a
+						href="#"
+						class="join"
+					>
+						<img
+							src="img/arrow.svg"
+							alt=""
+						/>
+						<span class="join-text">
+							Join <br />
+							The Class
+						</span>
+					</a>
+				</section>
+				<section class="header-info-block">
+					<div class="card-info">
+						<img
+							src="img/girl-avatar.jpg"
+							alt=""
+						/>
+						<h2 class="info-title">Karen William</h2>
+						<span class="info-subtitle"> Senior Designer </span>
+					</div>
+					<div class="card-about">
+						<div class="about-text-wrapper">
+							<span class="about-subtitle-text"> About </span>
+							<p class="about-descr">
+								quis nostrud exercitation ullamco laboris nisi
+								ut aliquip ex ea commodo consequat. Duis aute
+								irure dolor in
+							</p>
+						</div>
+						<div class="audio-holder">
+							<div class="audio-block">
+								<img
+									src="img/guy-avatar.jpg"
+									alt=""
+								/>
+								<div class="audio-container">
+									<div class="audio-detail">
+										<div class="control">
+											<i
+												class="fi-rr-play"
+												id="playPause"
+											></i>
+										</div>
+										<div id="wave"></div>
+									</div>
+								</div>
+							</div>
+							<div class="audio-author">
+								<div class="time">
+									<span id="current">0:00</span> /
+									<span id="duration">0:00</span>
+								</div>
+							</div>
+							<h2 class="about-title">Testimonial</h2>
+							<span class="about-subtitle"> Tom Hope </span>
+						</div>
+					</div>
+				</section>
+			</div>
+		</header>
 
-    <main class="main-content">
-        <div class="container">
-            <section class="courses">
-                <h1 class="courses-section-title">
-                    Popular Courses <br> this week
-                </h1>
+		<main class="main-content">
+			<div class="container">
+				<section class="courses">
+					<h1 class="courses-section-title">
+						Popular Courses <br />
+						this week
+					</h1>
 
-                <section class="courses-row">
-                    <div class="courses-card card-big">
-                        <div class="img-container img-card-1">
-                            <span class="btn-time">
-                                15 mins
-                            </span>
-                            <div class="btn-rating">
-                                4.8
-                                <img width="15px" height="15px" src="img/star.svg" alt="">
-                            </div>
-                        </div>
-                        <div class="info-container">
-                            <h4 class="course-category">
-                                PHOTOGRAPHY
-                            </h4>
-                            <h2 class="course-title">
-                                Create an attractive product photography
-                            </h2>
-                            <p class="course-desc">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="courses-card card-small">
-                        <div class="img-container img-card-2">
-                            <span class="btn-time">
-                                15 mins
-                            </span>
-                            <div class="btn-rating">
-                                4.8
-                                <img width="15px" height="15px" src="img/star.svg" alt="">
-                            </div>
-                        </div>
-                        <div class="info-container">
-                            <h4 class="course-category">
-                                DESIGN
-                            </h4>
-                            <h2 class="course-title">
-                                User Interface Design
-                            </h2>
-                            <p class="course-desc">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
-                            </p>
-                        </div>
-                    </div>
-                </section>
-                <section class="courses-row">
-                    <div class="courses-card card-small">
-                        <div class="img-container img-card-3">
-                            <span class="btn-time">
-                                15 mins
-                            </span>
-                            <div class="btn-rating">
-                                4.8
-                                <img width="15px" height="15px" src="img/star.svg" alt="">
-                            </div>
-                        </div>
-                        <div class="info-container">
-                            <h4 class="course-category">
-                                DESIGN
-                            </h4>
-                            <h2 class="course-title">
-                                User Interface Design
-                            </h2>
-                            <p class="course-desc">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="courses-card card-big">
-                        <div class="img-container img-card-4">
-                            <span class="btn-time">
-                                15 mins
-                            </span>
-                            <div class="btn-rating">
-                                4.8
-                                <img width="15px" height="15px" src="img/star.svg" alt="">
-                            </div>
-                        </div>
-                        <div class="info-container">
-                            <h4 class="course-category">
-                                PHOTOGRAPHY
-                            </h4>
-                            <h2 class="course-title">
-                                Create an attractive product photography
-                            </h2>
-                            <p class="course-desc">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
-                            </p>
-                        </div>
-                    </div>
-                </section>
-            </section>
-        </div>
-    </main>
+					<section class="courses-row">
+						<div class="courses-card card-big">
+							<div class="img-container img-card-1">
+								<span class="btn-time"> 15 mins </span>
+								<div class="btn-rating">
+									4.8
+									<img
+										width="15px"
+										height="15px"
+										src="img/star.svg"
+										alt=""
+									/>
+								</div>
+							</div>
+							<div class="info-container">
+								<h4 class="course-category">PHOTOGRAPHY</h4>
+								<h2 class="course-title">
+									Create an attractive product photography
+								</h2>
+								<p class="course-desc">
+									Lorem ipsum dolor sit amet, consectetur
+									adipiscing elit, sed do eiusmod tempor
+									incididunt ut labore et dolore magna.
+								</p>
+							</div>
+						</div>
+						<div class="courses-card card-small">
+							<div class="img-container img-card-2">
+								<span class="btn-time"> 15 mins </span>
+								<div class="btn-rating">
+									4.8
+									<img
+										width="15px"
+										height="15px"
+										src="img/star.svg"
+										alt=""
+									/>
+								</div>
+							</div>
+							<div class="info-container">
+								<h4 class="course-category">DESIGN</h4>
+								<h2 class="course-title">
+									User Interface Design
+								</h2>
+								<p class="course-desc">
+									Lorem ipsum dolor sit amet, consectetur
+									adipiscing elit, sed do eiusmod tempor
+									incididunt ut.
+								</p>
+							</div>
+						</div>
+					</section>
+					<section class="courses-row">
+						<div class="courses-card card-small">
+							<div class="img-container img-card-3">
+								<span class="btn-time"> 15 mins </span>
+								<div class="btn-rating">
+									4.8
+									<img
+										width="15px"
+										height="15px"
+										src="img/star.svg"
+										alt=""
+									/>
+								</div>
+							</div>
+							<div class="info-container">
+								<h4 class="course-category">DESIGN</h4>
+								<h2 class="course-title">
+									User Interface Design
+								</h2>
+								<p class="course-desc">
+									Lorem ipsum dolor sit amet, consectetur
+									adipiscing elit, sed do eiusmod tempor
+									incididunt ut.
+								</p>
+							</div>
+						</div>
+						<div class="courses-card card-big">
+							<div class="img-container img-card-4">
+								<span class="btn-time"> 15 mins </span>
+								<div class="btn-rating">
+									4.8
+									<img
+										width="15px"
+										height="15px"
+										src="img/star.svg"
+										alt=""
+									/>
+								</div>
+							</div>
+							<div class="info-container">
+								<h4 class="course-category">PHOTOGRAPHY</h4>
+								<h2 class="course-title">
+									Create an attractive product photography
+								</h2>
+								<p class="course-desc">
+									Lorem ipsum dolor sit amet, consectetur
+									adipiscing elit, sed do eiusmod tempor
+									incididunt ut labore et dolore magna.
+								</p>
+							</div>
+						</div>
+					</section>
+				</section>
+			</div>
+		</main>
 
-    <script src="wavesurfer.js"></script>
-    <script src="media.js"></script>
-</body>
+		<script src="wavesurfer.js"></script>
+		<script src="media.js"></script>
+	</body>
 </html>
