--- a/index.html
+++ b/index.html
@@ -221,7 +221,43 @@
 				</section>
 			</div>
 		</main>
-
+		<footer class="footer">
+			<div class="container">
+				<section class="courses-info">
+					<h1 class="course-info-title">
+						Discover Our <br />
+						Courses
+					</h1>
+					<section class="footer-row">
+						<div class="left-block">
+							<h4 class="course-number">01</h4>
+							<div class="course-block">
+								<h2 class="course-name">Graphic Design</h2>
+								<span class="course-count">125 courses</span>
+							</div>
+							<div class="course-block">
+								<h2 class="course-name">
+									Web Full-stack development
+								</h2>
+								<span class="course-count">100 courses</span>
+							</div>
+							<div class="course-block">
+								<h2 class="course-name">
+									Mobile Full-stack development
+								</h2>
+								<span class="course-count">3 courses</span>
+							</div>
+							<div class="course-block">
+								<h2 class="course-name">
+									Desktop Full-stack development
+								</h2>
+								<span class="course-count">1 courses</span>
+							</div>
+						</div>
+					</section>
+				</section>
+			</div>
+		</footer>
 		<script src="wavesurfer.js"></script>
 		<script src="media.js"></script>
 	</body>
