--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 					>
 						S
 					</a>
+					<a
+						href="#"
+						class="mob-btn"
+					>
+						=
+					</a>
 					<ul class="navigation-holder">
 						<li class="nav-link">
 							<a href="#"> EXPLORE </a>
@@ -235,23 +241,45 @@
 								<h2 class="course-name">Graphic Design</h2>
 								<span class="course-count">125 courses</span>
 							</div>
+						</div>
+					</section>
+					<section class="footer-row">
+						<div class="left-block">
+							<h4 class="course-number">02</h4>
 							<div class="course-block">
 								<h2 class="course-name">
-									Web Full-stack development
+									Full Stack Web Development
 								</h2>
 								<span class="course-count">100 courses</span>
 							</div>
+						</div>
+					</section>
+					<section class="footer-row">
+						<div class="left-block">
+							<h4 class="course-number">03</h4>
 							<div class="course-block">
 								<h2 class="course-name">
-									Mobile Full-stack development
+									Full Stack Mobile Development
 								</h2>
-								<span class="course-count">3 courses</span>
+								<span class="course-count">13 courses</span>
 							</div>
+						</div>
+					</section>
+					<section class="footer-row">
+						<div class="left-block">
+							<h4 class="course-number">04</h4>
 							<div class="course-block">
-								<h2 class="course-name">
-									Desktop Full-stack development
-								</h2>
-								<span class="course-count">1 courses</span>
+								<h2 class="course-name">Video Editing</h2>
+								<span class="course-count">127 courses</span>
+							</div>
+						</div>
+					</section>
+					<section class="footer-row">
+						<div class="left-block">
+							<h4 class="course-number">05</h4>
+							<div class="course-block">
+								<h2 class="course-name">Business</h2>
+								<span class="course-count">6 courses</span>
 							</div>
 						</div>
 					</section>
