--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 				<section class="header-info-block">
 					<div class="card-info">
 						<img
+							style="width: 100%"
 							src="img/i.jpg"
 							alt=""
 						/>
